# deRIP2

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE  MANIFEST.in  README.md  deRIP2.py  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.devcontainer/: environment.yml
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude.yml  codspeed.yml  publish.yml  pytest.yml  ruff.yml
api-docs/deRIP_API/: index.html
cli-docs/deRIP_cmd_line/: index.html
derip2/: __init__.py  run_self.py
docs/: index.md  tutorial.ipynb
docs/api-docs/: deRIP_API.md
docs/cli-docs/: deRIP_cmd_line.md
docs/snippets/: tanglegram.py
docs/tutorials/: flank-context-spectra.md  mutation-spectra.md  per-sequence-reporting.md  rip-masking-phylogeny.md  rip-strand-bias.md
search/: search_index.json
src/derip2/: __init__.py  aln_ops.py  annotation.py  app.py  app_spectra.py  derip.py  logs.py  persequence_report.py  report.py  utils.py
src/derip2/plotting/: __init__.py  flank_spectra.py  interactive.py  logo.py  minialign.py  persequence.py  spectra.py  strandbias.py
src/derip2/spectra/: __init__.py  call_mutations.py  channels.py  flank_channels.py  matrix_io.py  qc.py  tree_asr.py
src/derip2/stats/: __init__.py  flank_spectra.py  mutation_spectra.py  spectra_compare.py  strand_bias.py
src/derip2/utils/: checks.py  logs.py
tests/: conftest.py  test_aln_ops.py  test_annotation.py  test_app.py  test_app_spectra.py  test_derip.py  test_flank_spectra.py  test_flank_spectra_io.py  test_flank_spectra_plot.py  test_matrix_io.py  test_minialign.py  test_mutation_spectra.py  test_persequence_report.py  test_regression.py  test_rsi_integration.py  test_spectra_channels.py  test_spectra_compare.py  test_spectra_plot.py  test_spectra_qc.py  test_strand_bias.py  test_strandbias_plot.py  test_tree_spectra.py
tests/benchmarks/: test_bench.py
tests/data/: mintest.gff3  mintest.state  mintest.treefile  sahana_prime_miniprot_KAH4331560.gff3
tests/data/golden/: mintest_default.json  mintest_flank_spectra.json  mintest_reaminate.json  mintest_spectra.json  mintest_spectra_downstream.json
tutorial/: index.html
tutorials/flank-context-spectra/: index.html
tutorials/mutation-spectra/: index.html
tutorials/per-sequence-reporting/: index.html
tutorials/rip-masking-phylogeny/: index.html
tutorials/rip-strand-bias/: index.html
