[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "derip2"
authors = [{ name = "Adam Taranto", email = "adam.p.taranto@gmail.com" }]

description = "Predict ancestral sequence of fungal repeat elements by correcting for RIP-like mutations in multi-sequence DNA alignments."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]

dynamic = ["version", "dependencies"]

[tool.setuptools_scm]
write_to = "src/derip2/_version.py"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[project.urls]
homepage = "https://github.com/adamtaranto/derip2"
documentation = "https://github.com/adamtaranto/derip2"
repository = "https://github.com/adamtaranto/derip2"

[project.scripts]
derip2 = "derip2.app:main"


# Create and push tags
# git tag -a v0.0.4 
# git push origin v0.0.4

# Check what setuptools_scm thinks the current version is and create _version.py
#git describe
#python -m setuptools_scm
#python setup.py --version

# Build
#python3 -m pip install --upgrade build && python3 -m build
# OR
# Build sdist
# python setup.py sdist 

# Push to pypi
# twine upload dist/*
