[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "derip2"
description = "Predict ancestral sequence of fungal repeat elements by correcting for RIP-like mutations in multi-sequence DNA alignments."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Adam Taranto" }]

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "biopython>1.80",
    "click",
    "ete4",
    "matplotlib",
    "numpy",
    "pandas",
    "tqdm",
]

dynamic = ["version"]

[project.urls]
homepage = "https://github.com/adamtaranto/derip2"
documentation = "https://github.com/adamtaranto/derip2"
repository = "https://github.com/adamtaranto/derip2"

[project.scripts]
derip2 = "derip2.app:main"
derip2-spectra = "derip2.app_spectra:main"

[tool.hatch.build]
source = "src"

exclude = ["environment.yml", ".github", ".vscode"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.vcs]
tag-pattern = "v*"         # Git tags starting with 'v' will be used for versioning
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/derip2/_version.py"

# Optional dependencies for testing
[project.optional-dependencies]

# NOTE: the phylogenetic mutation-spectrum path (derip2-spectra --method phylo)
# also needs the IQ-TREE binary, which is not pip-installable. Install it
# separately (e.g. `conda install -c bioconda iqtree`) and ensure
# `iqtree3`/`iqtree2`/`iqtree` is on PATH. The ete4 Python dependency it uses is
# a core dependency above.

docs = [
    "mkdocs-jupyter",
    "mkdocs-material",
    "mkdocs",
    "mkdocstrings-python",
    "mkdocstrings",
    "notebook",
    "pymdown-extensions>=10.21.2,<11",
    "seaborn",
]

dev = ["hatch", "isort", "numpydoc-validation", "pre-commit", "ruff"]

test = ["pytest", "pytest-codspeed", "pytest-cov"]

[tool.pytest.ini_options]
# Benchmarks are heavy and only meaningful under CodSpeed; exclude them from the
# normal test run. Run them explicitly with: pytest tests/benchmarks --codspeed
addopts = "-v --cov=derip2 --cov-branch --cov-report=xml --cov-report=term --ignore=tests/benchmarks"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "C", # mccabe rules
    "F", # pyflakes rules
    "E", # pycodestyle error rules
    "W", # pycodestyle warning rules
    "B", # flake8-bugbear rules
    "I", # isort rules
]
ignore = [
    "C901", # max-complexity-10
    "E501", # line-too-long
    "I001", # isort-imports
    "B905", # `zip()` without an explicit `strict=` parameter
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.isort]
profile = "black"
known_third_party = ["Bio"]
known_first_party = ["derip2"]
default_section = "THIRDPARTY"
force_sort_within_sections = true

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks
    "ES01", # but don't require an extended summary
    "EX01", # or examples
    "SA01", # or a see also section
    "SS06", # and don't require the summary to fit on one line
]
exclude = [ # don't report on checks for these
    '\.__init__$',
    '\.__repr__$',
    '\.__str__$',
    '\._lap$',      # local timing closure in calculate_rip
    '\._mark$',     # local markup helper in correctRIP
    '\._set_cell$', # local overlay-fill helper in markupRIPBases
    '\._cells$',    # local coordinate gather in build_markupdict
    '\._merge$',    # local strand-merge helper in build_markupdict
    '\._sort_key$', # local sort key in sort_by_rsi
]
override_SS05 = [ # allow docstrings to start with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]
